--- a/roles/vim/meta/main.yml
+++ b/roles/vim/meta/main.yml
@@ -38,6 +38,12 @@ galaxy_info:
   #   - 1.0
   #   - 7
   #   - 99.99
+  platforms:
+  - name: EL
+    versions:
+    - "7"
+    - "8"
+    - "9"
 
   galaxy_tags: []
     # List tags for your role here, one per line. A tag is a keyword that describes
