--- a/roles/vim/tasks/main.yml
+++ b/roles/vim/tasks/main.yml
@@ -1,2 +1,41 @@
 ---
 # tasks file for vim
+- name: Install required packages
+  ansible.builtin.package:
+    name: "{{ install_packages }}"
+    state: present
+  become: true
+  tags:
+    - install_packages
+
+- name: Ensure .vim/{autoload,bundle} directory exists
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    recurse: false
+    mode: '0750'
+  loop:
+    - "{{ vim_dir }}"
+    - "{{ vim_dir }}/autoload"
+    - "{{ vim_dir }}/bundle"
+
+- name: Ensure Pathogen is in place
+  ansible.builtin.get_url:
+    dest: "{{ vim_dir }}/autoload/pathogen.vim"
+    url: https://tpo.pe/pathogen.vim
+
+- name: Deploy plugins
+  ansible.builtin.git:
+    dest: "{{ vim_dir }}/bundle/{{ item.name }}"
+    repo: "{{ item.url }}"
+    clone: true
+    update: true
+    recursive: false
+  loop: "{{ plugins }}"
+
+- name: Ensure .vimrc config in place
+  copy:
+    src: vimrc
+    dest: "{{ vimrc }}"
+    backup: true
+    mode: '0640'
